# fastapi-example

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  main.py  pyproject.toml
app/: auth.py  database.py
app/api/: auth_router.py  employee_router.py
app/core/: __init__.py  config.py  exceptions.py  logging.py
app/errors/: exception_handlers.py
app/routers/: employee_router.py
app/schemas/: employee.py  pagination.py  user.py
app/services/: base.py  employee_service.py  user_service.py
scripts/: seed_data.py
tests/: __init__.py  conftest.py  test_auth.py  test_employees.py
